--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,7 @@ body{
     width: 100%;
     background-color: #f5f5f5;
 }
-.main-body{
+#main-body{
     overflow-x: hidden;
 }
 .fixedbody{
@@ -67,7 +67,7 @@ header{
 }
 .header-top-content{
     width: 90%;
-    max-width: 1100px;
+    max-width: 1600px;
     padding: 10px 0px;
     display: flex;
     justify-content: space-between;
@@ -104,7 +104,7 @@ header{
     justify-content: space-between;
     align-items: center;
     grid-gap: 30px;
-    max-width: 1100px;
+    max-width: 1600px;
     width: 90%;
     padding: 20px 0px;
 }
@@ -215,7 +215,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1100px;
+    max-width: 1600px;
     width: 90%;
     margin: auto;
     padding: 30px 0px;
@@ -247,12 +247,12 @@ header{
 }
 .menu li a,
 .menu li label{
-    margin: 0px 15px;
-    color: #4d4d4d;
+    margin-left:42px;
+    color: #1d1d1d;
     letter-spacing: 0.5px;
-    font-weight: 400;
+    font-weight: 450;
     transition: all ease 0.3s;
-    font-size: 0.9rem;
+    font-size: 1.063rem;
     cursor: pointer;
 } 
 .menu li label i{
@@ -270,17 +270,26 @@ header{
     letter-spacing: 1px;
 }
 .drop-collections{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: calc(100% + 4px);
+    position: fixed;
+    left: 0px;
+    transform: translateX(0%);
+    top: 150px;
     background-color: #ffffff;
     z-index: 101;
     width: 100%;
-    width: 850px;
+    width: 100%;
     padding: 20px;
     border-radius: 0px 0px 10px 10px;
     display: none;
+    padding-bottom: 50px;
+}
+.drop-collections-menu{
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 40px;
+}
+#header.fixed .drop-collections{
+    top: 100px;
 }
 
 .nav-drop-down{
@@ -309,6 +318,14 @@ header{
         top: 0px;
     }
 }
+@keyframes navanimation2{
+    0%{
+        top: -100%;
+    }
+    100%{
+        top: 100px;
+    }
+}
 @media(min-width:1000px){
 nav:after{
     content: '';
@@ -323,15 +340,9 @@ nav:after{
 }
 .nav-drop-down:hover .drop-collections{
     display: block;
+    animation: none !important;
 }
 .product-bg{
-    position: absolute;
-    left: 0px;
-    top: 100%;
-    width: 100%;
-    height: calc(60vh + 5px);
-    background-color: #ffffff;
-    z-index: 10;
     display: none;
 }
 #show-drop-collections:checked ~ .product-bg{
@@ -385,8 +396,8 @@ nav:after{
 }
 #show-drop-collections:checked ~ nav .menu-container .menu li .drop-collections{
     display: block !important;}
-#show-drop-collections:checked  ~ nav .menu-container .menu li label.show-drop-collections {
-    color: #000000 !important;
+#show-drop-collections:checked  ~ nav .menu-container .menu li label {
+    color: var(--second-main-color) !important;
 }
 /*==making-responsive============*/
 .menu-icon,
@@ -396,12 +407,28 @@ nav:after{
 #show-drop-collections{
     display: none;
 }
+.show-drop-collections label{
+    margin-left: 0px !important;
+}
 @media(max-width:1000px){
     .navigation{
         justify-content: center;
         padding: 20px 20px;
         position: relative;
         width: 100%;
+    }
+    .drop-collections{
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: calc(100% + 4px);
+        background-color: #ffffff;
+        z-index: 101;
+        width: 100%;
+        width: 850px;
+        padding: 20px;
+        border-radius: 0px 0px 10px 10px;
+        display: none;
     }
     .logo img{
         max-height: 30px;}
@@ -431,7 +458,7 @@ nav:after{
         padding: 0px;
     }
     .navigation .menu li a,
-    .navigation .menu li label{
+    .navigation .menu li .show-drop-collections{
         width: 100%;
         display: flex;
         justify-content: center;
@@ -439,6 +466,10 @@ nav:after{
         margin: 0px;
         padding: 20px;
         border-bottom: 1px solid #e2e2e26e;
+    }
+    .navigation .menu li .show-drop-collections a{
+        border: none;
+        padding: 0px;
     }
     .drop-collections{
         position: static;
@@ -539,7 +570,7 @@ nav:after{
 }
 /*==main============================*/
 .content-container {
-    max-width: 1300px;
+    max-width: 1600px;
     width: 90%;
     margin: 20px auto;
     margin-bottom: 40px;
@@ -855,7 +886,7 @@ nav:after{
 }
 
 .main_product_container {
-    max-width: 1100px;
+    max-width: 1600px;
     width: 90%;
 }
 
@@ -1328,7 +1359,7 @@ nav:after{
     justify-content: center;
     align-content: center;
     width: 100%;
-    max-width: 1100px;
+    max-width: 1600px;
     margin: auto;
 }
 
@@ -1694,7 +1725,7 @@ nav:after{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     padding-bottom: 50px;
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     margin: auto;
     grid-gap: 40px 20px;
@@ -2055,7 +2086,7 @@ nav:after{
 #partner{
     display: flex;
     flex-direction: column;
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     margin: 0px auto 50px auto;
     padding: 20px 0px;
@@ -2082,7 +2113,7 @@ nav:after{
 /*==recent-product==============================*/
 .recent-product{
     margin: 50px auto;
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
 }
 .product-heading{
@@ -2199,7 +2230,7 @@ nav:after{
 }
 .r-product-box.r-category-box .r-product-img{
     overflow: hidden;
-    height: 300px;
+    height: 400px;
     border: 10px solid #ffffff;
 }
 .r-product-img img{
@@ -2232,13 +2263,16 @@ nav:after{
     color: #535353;
     transition: all ease 0.3s;
 }
-.r-product-text a:hover{
+.r-product-box.r-category-box:hover .r-product-text a{
     background-color: var(--second-main-color);
     color: #ffffff;
 }
+@media(max-width:724px){}
+.r-product-box.r-category-box .r-product-img{
+    height: 300px;}
 /*==sale==============================*/
 .sale{
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     margin: 20px auto;
     display: grid;
@@ -2279,7 +2313,7 @@ nav:after{
 }
 /*==popular-product=======================*/
 #popular-product{
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     margin: 50px auto;
 }
@@ -2409,7 +2443,7 @@ nav:after{
 }
 /*==services========================*/
 .services{
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     margin: 50px auto;
     display: grid;
@@ -2475,7 +2509,7 @@ footer{
     width: 100%;
 }
 .footer-container{
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     margin: 0px auto;
     display: flex;
@@ -2487,9 +2521,12 @@ footer{
 .footer-subscribe{
     max-width: 330px;
 }
+.footer-contact-box{
+    margin-bottom: 16px !important;
+}
 .footer-subscribe strong{
-    margin-bottom: 7px;
     display: flex;
+    margin-bottom: 25px;
 }
 .footer-company-box .footer-logo{
     color: #ffffff;
@@ -2506,8 +2543,10 @@ footer{
 .footer-company-box p,
 .footer-subscribe p{
     color: #dfdfdf;
-    margin: 5px 0px;
-    font-size: 0.9rem;
+    margin: 10px 0px;
+    font-size: 1rem;
+    line-height: 1.8rem;
+    letter-spacing: 0.4px;
 }
 .footer-social{
     display: flex;
@@ -2540,17 +2579,21 @@ footer{
 }
 .footer-link-box strong,
 .footer-subscribe strong{
-    font-size: 1.2rem;
-    color: #ffffff;
-    font-weight: 600;
+    font-size: 1.4rem;
+    color: var(--second-main-color);
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 .footer-link-box ul{
-    margin-top: 5px;
+    margin-top: 30px;
 }
 .footer-link-box ul li a{
     color: #b8b8b8;
     transition: all ease 0.3s;
-    font-size: 0.9rem;
+    font-size: 0.96rem;
+    margin-bottom: 16px;
+    display: flex;
 }
 .footer-link-box ul li a:hover{
     color: var(--second-main-color);
@@ -2868,9 +2911,9 @@ footer{
 }
 .main-product-container{
     display: grid;
-    grid-template-columns: 255px 1fr;
+    grid-template-columns: 300px 1fr;
     grid-gap: 20px;
-    max-width: 1100px;
+    max-width: 1600px;
     margin: auto;
 }
 .sidebar-main{
@@ -3239,9 +3282,9 @@ footer{
 }
 /**/
 .category-banner{
-    width: 94%;
-    max-width: 1100px;
-    height: 180px;
+    width: 100%;
+    max-width: 1600px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -3276,7 +3319,7 @@ footer{
     color: #ffffff;
     font-weight: 500;
     letter-spacing: 2px;
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
     width: 90%;
 }
@@ -3285,7 +3328,9 @@ footer{
         width: 100%;}
 }
 @media(max-width:724px){
-    
+    .category-banner{
+        height: 180px;
+    }
 .category-banner h1{
     font-size: 1.4rem;}
 }
@@ -3298,6 +3343,7 @@ footer{
     padding: 40px;
     border-top: 1px solid rgba(0, 0, 0, 0.05);
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    background-color: #ffffff;
 }
 .blog-heading{
     display: flex;
@@ -3306,33 +3352,35 @@ footer{
     align-items: center;
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 50px;
 }
 .blog-heading span{
-    color: var(--second-main-color);
+    color: #6b6b6b;
 }
 .blog-heading h3{
-    font-size: 2.4rem;
+    font-size: 3.17rem;
     color: #2b2b2b;
-    font-weight: 600;
+    font-weight: 800;
 }
 .blog-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: 20px 0px;
     flex-wrap: wrap;
+    max-width: 1600px;
+    grid-gap: 50px;
 }
  
 .blog-box{
-    width:350px;
+    width:100%;
     background-color: #ffffff;
     border: 1px solid #ececec;
-    margin: 20px 20px;
  
 }
 .blog-img{
     width:100%;
     height: auto;
+    display: flex;
 }
 .blog-img img{
     width:100%;
@@ -3375,13 +3423,13 @@ footer{
  
 @media(max-width:1250px){
  
-    .blog-box{
-        width: 300px;
+    .blog-container{
+        grid-template-columns:1fr 1fr ;
     }
 } 
-@media(max-width:1100px){
-    .blog-box{
-        width:100%;
+@media(max-width:724px){
+    .blog-container{
+        grid-template-columns:1fr ;
     }
 }
  
@@ -3419,7 +3467,7 @@ footer{
 .mySwiperCertificate .swiper-slide {
     background-position: center;
     background-size: contain;
-    width: 300px;
+    width: 390px;
   }
   .mySwiperCertificate .swiper-slide img{
     width: 100%;
@@ -3497,20 +3545,58 @@ footer{
 /*==Contact-page======================*/
 #contact-page{
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 60px auto;
-    max-width: 1000px;
     width: 100%;
+    padding: 50px 0px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+#contact-page h2{
+    color: #ffffff;
+    font-size: 2rem;
+    font-weight: 500;
+    z-index: 3;
+    text-align: start;
+    display: flex;
+    width: 90%;
+    max-width: 1400px;
+}
+#contact-page h3{
+    color: #ffffff;
+    font-size: 1rem;
+    z-index: 3;
+    font-weight: 400;
+    margin-bottom: 50px;
+    display: flex;
+    width: 90%;
+    max-width: 1400px;
+    margin-top: 5px;
+}
+#contact-page::after{
+    content: '';
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #000000c5;
 }
 .contact-page{
-    max-width: 500px;
+    max-width: 1400px;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     background-color: #ffffff;
     padding: 30px;
     border: 1px solid #f1f1f1;
+    position: relative;
+    z-index: 4;
+    border-radius: 10px;
 }
 .contact-form{
     display: flex;
@@ -3525,27 +3611,28 @@ footer{
     border: none;
     outline: none;
     padding: 10px;
-    border-radius: 5px;
     margin-bottom: 10px;
+    border-left: 3px solid #000;
 }
 .contact-form textarea{
     background-color: #f5f5f5;
     border: none;
     outline: none;
     padding: 10px;
-    border-radius: 5px;
     margin-bottom: 10px;
     font-size: 0.9rem;
     min-height: 150px;
     resize: none;
+    border-left: 3px solid #000;
 }
 .contact-form input[type="submit"]{
-    background-color: var(--main-color);
+    background-color: var(--second-main-color);
     color: #ffffff;
     text-transform: uppercase;
     font-weight: 600;
     margin-bottom: 0px;
     cursor: pointer;
+    border-left:none;
 }
 .contact-page-img{
     max-width: 300px;
@@ -3557,6 +3644,18 @@ footer{
     height: 100%;
     object-fit: contain;
     object-position: center;
+}
+.contact-page h1{
+    color: #ffffff;
+    background-color: #000000;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.contact-details-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 @media(max-width:800px){
@@ -3570,10 +3669,14 @@ footer{
     .contact-page{
         padding: 20px;
     }
-    .contact-page h1{
-        font-size: 1.2rem;
-        color: #0f1012;
-    }
+}
+@media(max-width:724px){
+.contact-details-grid{
+    grid-template-columns: 1fr;
+}
+#contact-page h2{
+    font-size: 1.8rem;
+}
 }
 
 .messages-profile li{
@@ -3629,21 +3732,21 @@ footer{
 }
 .about-us-heading h3{
     color: #1a1a1a;
-    font-size: 2.4rem;
+    font-size: 3.125rem;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 800;
 }
 .about-us-heading strong{
-    color: var(--second-main-color);
+    color: #727272;
     font-size: 1rem;
     font-weight: 400;
 }
 .about-us-container{
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 700px;
     grid-gap: 40px;
     align-items: center;
 }
@@ -3657,11 +3760,11 @@ footer{
     padding: 0px 5px;
 }
 .about-us-text p{
-    color: #575757;
+    color: #6e6e6e;
     margin: 20px 0px;
     letter-spacing: 0.1px;
-    line-height: 1.8rem;
-    font-size: 1rem;
+    line-height: 2.8rem;
+    font-size: 1.375rem;
 }
 .about-us-text a{
     width: 200px;
@@ -3708,6 +3811,10 @@ footer{
     .product-center-heading{
         margin-top: 0px !important;
     }
+    .about-us-text p{
+        font-size: 1.1rem;
+        line-height: 2rem;
+    }
 }
 .go-home-btn{
     color: var(--second-main-color) !important;
@@ -3721,7 +3828,7 @@ footer{
 .whatwedo-box-wrapper{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    max-width: 1200px;
+    max-width: 1600px;
     width: 90%;
     grid-gap: 50px;
 }
@@ -3813,11 +3920,11 @@ footer{
 }
 .home-contact-container{
     display: grid;
-    grid-template-columns: 1fr 450px;
-    grid-gap: 80px;
+    grid-template-columns: 1fr 650px;
+    grid-gap: 100px;
     margin-top: 40px;
     width: 90%;
-    max-width: 1200px;
+    max-width: 1600px;
     align-items: center;
 }
 .swiper-slide img{
@@ -3871,6 +3978,9 @@ footer{
     
     #home-contact h3{
         font-size: 1.8rem;
+    }
+    .home-contact-container{
+        grid-gap: 50px;
     }
     
 .swiper-button-next::after, .swiper-button-prev::after{
@@ -3929,7 +4039,7 @@ footer{
 .faqs-page-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-width: 1100px;
+    max-width: 1600px;
     margin: 50px auto;
     grid-gap: 50px;
 }
@@ -4117,12 +4227,12 @@ footer{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px;
-    max-width: 1100px;
+    max-width: 1600px;
     margin: 50px auto;
 }
 .oem-box{
     display: grid;
-    grid-template-columns: 100px 1fr;
+    grid-template-columns: 180px 1fr;
     grid-gap: 20px;
     align-items: flex-start;
     background-color: #ffffff;
@@ -4191,6 +4301,9 @@ footer{
 .oemodm-page-container{
     grid-template-columns: 1fr 1fr;
 }
+.oem-box{
+    grid-template-columns: 100px 1fr;}
+
 }
 @media(max-width:770px){   
 .custome-oem .whatwedo-box{
@@ -4267,16 +4380,16 @@ a .alibaba{
     fill: var(--second-main-color);
 }
 #contact-details{
-    max-width: 1100px;
+    max-width: 1600px;
     width: 90%;
     margin: 80px auto;
+    margin-bottom: 0px;
+    z-index: 4;
 }
 #contact-details h2{
     color: #ffffff;
-    font-size: 1rem;
-    font-weight: 600;
-    background-color: var(--second-main-color);
-    padding: 10px 20px;
+    font-size: 2rem;
+    font-weight: 500;
     border-radius: 5px;
 }
 .contact-details-container{
@@ -4294,21 +4407,28 @@ a .alibaba{
     margin-right: 20px;
 }
 .contact-details-box .contact-details-box-icon i{
-    color: var(--second-main-color);
+    color: #ffffff;
 }
 .contact-details-box-text{
-    color: #272829;
-    font-size: 1rem;
-    font-weight: 500;
+    color: #ffffff;
+    font-size: 1.1rem;
+    font-weight: 400;
 }
 .contact-available-text{
     padding: 20px 0px;
-    border-top: 1px dashed #262626;
-    border-bottom: 1px dashed #262626;
+    border-top: 1px dashed #ffffff;
+    border-bottom: 1px dashed #ffffff;
     font-weight: 600;
     margin-top: 20px;
     font-size: 1.2rem;
-    color: #262626;
+    color: #ffffff;
+    width: 100%;
+    display: flex;
+}
+@media(max-width:724px){
+    #contact-details h2{
+        font-size: 1.6rem;
+    }
 }
 /* mgnifer */
 
