--- a/templates/home/about-us.html
+++ b/templates/home/about-us.html
@@ -27,7 +27,7 @@
         <p>{{about.about_page_paragraph|safe}}</p>
     </div>
     <!--==Banner===============-->
-    <div class="category-banner"  data-aos="zoom-in" style="max-width:100%; border-radius:0px; margin-top:50px">
+    <div class="category-banner about-category-banner"  data-aos="zoom-in" style="max-width:100%; border-radius:0px; margin-top:50px">
         <img src="{{about.start_banner_image.url}}" alt="{{about.about_page_heading}}">
     </div>
 
