--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -48,8 +48,8 @@
 
 <section id="about-us">
     <div class="about-us-heading" data-aos="fade-up">
-        <h3>Who is {{sitedata.site_name}}</h3>
-        <strong>Our Advantage</strong>
+        <h3>{{homeabout.heading}}</h3>
+        <strong>{{homeabout.label}}</strong>
     </div>
     <div class="about-us-container" data-aos="fade-up">
     <!--***text********************-->
@@ -93,11 +93,11 @@
 </div>
 
     <!--**blog-section************-->
-    <section id="blog">
+    <section id="blog" class="blog-1">
         <!--blog-heading-->
         <div class="blog-heading" data-aos="fade-up">
-            <h3>What will you gain?</h3>
-            <span>Same price, superior quality; Equal quality, better deal</span>
+            <h3>{{whatgainheading.heading}}</h3>
+            <span>{{whatgainheading.paragraph}}</span>
         </div>
   
   
