--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,9 +36,9 @@ body{
     --heading-color: #060606;
     --paragraph-color: #5d5d5d;
     --main-color: #000000;
-    --second-main-color: #fa8609;
+    --second-main-color: #c80c24;
     --third-main-color: #FAF0E6;
-    --light-main-color: #f8cb92;
+    --light-main-color: #ffb9c2;
     --border-color: #eeeeee;
     --bg-color: #ffffff;
     --footer-bg-color: #1f1f1f;
@@ -269,7 +269,7 @@ header{
     max-width: 1600px;
     width: 90%;
     margin: auto;
-    padding: 30px 0px;
+    padding: 20px 0px;
     background-color: #ffffff;
     border-bottom: 1px solid #e2e2e26e;
     z-index: 90;
@@ -284,7 +284,7 @@ header{
 }
 .logo img{
     max-width: 180px;
-    max-height: 40px;
+    max-height: 60px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -466,15 +466,50 @@ nav:after{
 .show-drop-collections label{
     margin-left: 0px !important;
 }
+.close-bg{
+    display: none;
+}
 @media(max-width:1064px){
+    .header-top{
+        z-index: 100;
+    }
+    .close-bg{
+        position: fixed;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        background-color: #00000028;
+        z-index: -1;
+    }
     .navigation{
-        justify-content: space-between;
-        padding: 20px 20px;
+        display: grid !important;
+        grid-template-columns: 78px 1fr 78px;
+        padding: 15px 20px;
         position: relative;
         width: 100%;
+        background-color: #ffffff;
+        position: relative;
+    }
+    .navigation::after{
+        content: '';
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-color: #ffffff;
+    }
+    .logo{
+        margin: 0px auto;
     }
     .language-dropdown-container-mobile{
         display: block;
+    }
+    .show-drop-collections label{
+        position: absolute;
+        right: 20px;
     }
     .drop-collections{
         position: absolute;
@@ -493,17 +528,21 @@ nav:after{
         display: none;
     }
     .logo img{
-        max-height: 30px;}
+        max-height: 35px;}
     .menu-container{
         display: none;
         flex-direction: column;
         position: absolute;
         left: 0px;
-        top:calc(100%);
+        top:calc(100% + 1px);
         width: 100%;
-        height: calc(100vh - 150px);
+        max-height: calc(100vh - 150px);
         overflow-y: auto;
         box-shadow: 2px 22px 30px rgba(0, 0, 0, 0.05);
+    }
+    #header .menu-container{
+        top: calc(100%);
+        border-top: 1px solid #f0f0f0;
     }
     .navigation .menu{
         display: block;
@@ -591,6 +630,9 @@ nav:after{
     .navigation .menu-icon:checked ~ .menu-icon .nav-icon,
     .navigation .menu-btn:checked ~ .menu-icon .nav-icon{
         background-color: transparent;
+    }
+    .navigation .menu-btn:checked ~ .close-bg{
+        display: block;
     }
     .navigation .menu-btn:checked ~ .menu-icon .nav-icon::before{
         transform: rotate(-45deg);
@@ -2419,6 +2461,7 @@ nav:after{
     max-width: 1600px;
     width: 90%;
     margin: 50px auto;
+    overflow-x: hidden;
 }
 .popular-product-container{
     display: grid;
@@ -2638,8 +2681,12 @@ footer{
     font-weight: 800;
     letter-spacing: 1px;
 }
+.footer-logo{
+    display: flex;
+}
 .footer-logo img{
-    max-height: 55px;
+    max-height: 120px;
+    height: 100%;
     object-fit: contain;
     object-position: center;
 }
@@ -2997,9 +3044,10 @@ footer{
 }
 .d-product-show{
     width: 100%;
-    margin-top: 50px;
+    margin: 50px auto 0px auto;
     display: flex;
     flex-direction: column;
+    max-width: 1000px;
 }
 .d-product-show h2{
     color: #000000;
@@ -3449,6 +3497,9 @@ footer{
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     background-color: #ffffff;
 }
+#blog.blog-1{
+    padding-top: 70px;
+}
 .blog-heading{
     display: flex;
     flex-direction: column;
@@ -3473,13 +3524,15 @@ footer{
     flex-wrap: wrap;
     max-width: 1600px;
     grid-gap: 50px;
+    align-items: flex-start;
 }
  
 .blog-box{
     width:100%;
     background-color: #ffffff;
     border: 1px solid #ececec;
- 
+    display: flex;
+    flex-direction: column;
 }
 .blog-img{
     width:100%;
@@ -3488,6 +3541,7 @@ footer{
 }
 .blog-img img{
     width:100%;
+    max-height: 310px;
     height: 100%;
     object-fit: cover;
     object-position: center;
@@ -3540,7 +3594,7 @@ footer{
 @media(max-width:550px){
    
     .blog-box{
-        margin: 20px 10px;
+        margin: 20px 0px;
         width: 100%;
     }
     #blog{
@@ -3563,7 +3617,7 @@ footer{
 }
 .mySwiperCertificate{
     width: 100%;
-    margin-top: 50px;
+    margin-top: -50px;
     padding-top: 50px;
     padding-bottom: 50px;
     margin-bottom: 50px;
@@ -3583,6 +3637,9 @@ footer{
     .mySwiperCertificate .swiper-slide {
         width: 260px;
       }
+      .mySwiperCertificate{
+        width: 100%;
+        margin-top: -30px;}
   }
 
 /**/
@@ -3947,6 +4004,25 @@ footer{
     .whatwedo-box-wrapper{
         grid-template-columns: 1fr;
     }
+    .whatwedo-box-text p{
+        margin-top: 5px !important;
+    }
+    .whatwedo-box-wrapper{
+        grid-gap: 90px;
+    }
+    .blog-heading{
+        margin-bottom: 0px;
+    }
+    .blog-container{
+        margin: 0px;
+    }
+    .blog-container{
+        grid-gap: 0px;
+    }
+    .blog-box{
+        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.05);
+    }
+
 }
 .whatwedo-box{
     display: flex;
@@ -3995,6 +4071,7 @@ footer{
     justify-content: center;
     align-items: center;
     padding: 80px 0px;
+    overflow-x: hidden;
 }
 #home-contact::before{
     content: '';
