--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2414,7 +2414,6 @@ nav:after{
     background-color: var(--second-main-color);
     color: #ffffff;
 }
-@media(max-width:724px){}
 .r-product-box.r-category-box .r-product-img{
     height: 300px;}
 /*==sale==============================*/
@@ -4892,4 +4891,10 @@ a .alibaba{
 }
 .static-container.new-static-container .static-content p{
     color: #252525;
+}
+
+@media(max-width:724px){
+    #about-us{
+        padding-top: 30px;
+    }
 }
